# mlops-agents

./: README.md
testbed/: .agent.env.example  .gitignore  Makefile  pyproject.toml  requirements-base.txt
testbed/coordinator/: grading.py  interface_log.py  kaggle.py  main.py  prepare.py  usage_client.py
testbed/litellm/: config.yaml  jsonl_callback.py
testbed/prompts/: CLI_gen.md  MCP_gen.md  MLE_exec.md  task_feedback.md
testbed/prompts/skills/hops/: hops-skills-v1.md
testbed/results/: results.csv
testbed/results/claude-sonnet/no-skill/local/aerial-cactus-identification/0/: agent.jsonl  agent.md  commands.sh  prompt.md  submission.csv  train.py
testbed/results/claude-sonnet/no-skill/local/aerial-cactus-identification/0/inline_python/: cmd_001.py  cmd_002.py  cmd_003.py  cmd_004.py  cmd_005.py
testbed/scripts/: install.sh  start.sh  stop.sh
testbed/scripts/interface/: build.sh  install.sh  test.sh  uninstall.sh
thesis/: custom_configuration.tex  references.bib  thesis.tex
thesis/img/: mlops-agent.drawio
thesis/lib/: acronyms.tex
